--- a/assets/resources/style/style.css
+++ b/assets/resources/style/style.css
@@ -1,6 +1,10 @@
 html {
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+  background-color: #F0F3F8;
+  color: rgb(0, 0, 0);
 }
+
+/*Nav----------------------------------------------------------*/
 
 nav {
   height: 8.5vh;
@@ -26,6 +30,48 @@ nav {
   font-size: clamp(2.1875rem, 1.9701rem + 1.087vi, 2.8125rem);
 }
 
+.logo{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.img-logo{
+  height: 40px;
+}
+
+/*Main----------------------------------------------------------------*/
+
+main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.main{
+  background-color: white;
+  width: 75vw;
+  margin: 50px;
+  border-radius: 10px;
+  min-height: 700px;
+  display: flex;
+  justify-content: center;
+}
+
+hr {
+  border: 0;
+  border-top: 1px solid #8f8f8f1c; 
+  margin: 5px 0;
+}
+
+.container {
+  max-width: 86vw;
+  margin: 0 auto;
+  padding: 20px 15px;
+}
+
 /*textos-------------------------------------------------------------*/
 h1 {
   font-size: 30px;
@@ -39,49 +85,60 @@ h2 {
 
 a {
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
 }
 
 /*botões----------------------------------------------------------*/
 .btn {
-  font-weight: 600;
+  font-weight: 400;
   border: none;
-  border-radius: 5px;
-}
-
-.btn-green {
-  background-color: rgb(32, 212, 32);
-  color: white;
-}
-
-.btn-red {
-  background-color: rgb(255, 0, 0);
-  color: white;
+  border-radius: 2px;
+  padding: 8px;
+  cursor: pointer;
 }
 
 .btn-section {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  gap: 15px;
 }
 
-@media (max-width: 600px) {
-  .btn {
-    font-size: 12px;
-    max-width: 80px;
-  }
+.btn-purple {
+  background-color: #A46FFB;
+  color: white;
 }
-/*----------------------------------------------------------------*/
-.container {
-  max-width: 70vw;
-  margin: 0 auto;
-  padding: 20px;
+
+.btn-grey{
+  background-color: #F0F3F8;
+  color: #000000;
 }
+
+.btn-edit{
+  background-color: #A46FFB;
+  color: white;
+  width: 56px;
+  height: 20px;
+  border: none;
+  border-radius: 2px;
+  margin: 5px;
+}
+
+.btn-delete{
+  background-color: rgb(218, 218, 218);
+  color: #9c9c9c;
+  width: 56px;
+  height: 20px;
+  border: none;
+  border-radius: 2px;
+}
+
+/*Produtos---------------------------------------------------------*/
 
 .produtos {
   display: flex;
   flex-direction: column;
-  gap: 25px;
-  margin-top: 20px;
+  gap: 15px;
 }
 
 table {
@@ -95,7 +152,6 @@ thead {
 
 th,
 td {
-  border-bottom: 1px solid #17cdd3;
   padding: 8px;
   text-align: center;
   max-width: 100px;
@@ -106,7 +162,7 @@ td {
 }
 
 .responsive-table {
-  width: 1000px;
+  width: 70vw;
   border-collapse: collapse;
 }
 
@@ -114,11 +170,15 @@ td {
 .responsive-table td {
   padding: 8px;
   text-align: left;
-  border-bottom: 1px solid #19ceee;
   max-width: 100px;
+  word-wrap: break-word; 
+  white-space: normal; 
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /*modal----------------------------------------------------------*/
+
 .modal {
   display: none;
   position: fixed;
@@ -128,29 +188,30 @@ td {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0, 0, 0, 0.24);
+  background-color: rgba(0, 0, 0, 0.568);
   border: none;
   border-radius: 5px;
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: white;
   margin: 15% auto;
-  padding: 20px;
-  border-radius: 10px;
-  width: 80%; /* Largura inicial do modal */
-  max-width: 600px; /* Largura máxima do modal */
+  padding: 40px 30px;
+  border-radius: 8px;
+  width: 80%;
+  max-width: 350px; 
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  gap: 8px;
 }
 
 .add-produto {
   width: 100%;
   display: flex;
-  gap: 20px;
+  gap: 25px;
   align-items: center;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 .campo-texto {
@@ -158,7 +219,7 @@ td {
   flex-direction: column;
   gap: 15px;
   width: 40%;
-  text-align: end;
+  text-align: start;
 }
 
 .inputs {
@@ -171,37 +232,39 @@ td {
   margin: auto;
 }
 
-.btn {
-  font-weight: 600;
-  max-width: 130px;
-  width: 33vw;
-  border: none;
+input, textarea{
   border-radius: 5px;
-  padding: 8px;
-}
-
-.btn-green {
-  background-color: rgb(32, 212, 32);
-  color: white;
-}
-
-.btn-red {
-  background-color: rgb(255, 0, 0);
-  color: white;
-}
-
-.btn-section {
-  display: flex;
-  justify-content: space-between;
-}
-
-@media screen and (max-width: 768px) {
-  .modal-content {
-    width: 90%; /* Largura do modal em telas menores */
-  }
+  border: 1px solid #00000029;
 }
 
 .form-flex {
   display: flex;
   gap: 30px;
 }
+
+/*Responsividade----------------------------------------------------------*/
+@media screen and (max-width: 460px) {
+  .modal-content {
+    padding: 30px 12px;
+  }
+
+}
+
+@media (max-width: 600px) {
+  .btn {
+    font-size: 12px;
+    width: 82px;
+  }
+  .main{
+    width: 90%;
+  }
+}
+
+@media (max-width: 700px) {
+  .main{
+    width: 90%;
+  }
+}
+
+
+
